--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -13,6 +13,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Restore previous database artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: ev-db
+        path: data
+      continue-on-error: true
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -22,14 +29,15 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    - name: Run fetch script
+    - name: Run fetch script (Change Detection)
       env:
         OCM_API_KEY: ${{ secrets.OCM_API_KEY }}
       run: |
         python src/fetch.py
 
-    - name: Upload database as artifact
+    - name: Upload updated database
       uses: actions/upload-artifact@v4
       with:
         name: ev-db
         path: data/ev.db
+        retention-days: 30
