Added heartbeat for workflow

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -13,6 +13,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Heartbeat
+      run: echo "Heartbeat $(date -u) — Workflow triggered"
+
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
